# Agentic-AI-Retail

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/agents/: __init__.py  analyst_agent.py  auditor_agent.py  base.py  data_engineer_agent.py  data_scientist_agent.py  manager_agent.py  worker_agent.py
backend/app/agents/prompts/: analyst.yaml  auditor.yaml  data_scientist.yaml  manager.yaml  worker.yaml
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  logging.py
backend/app/graph/: state.py  workflow.py
backend/app/models/: __init__.py  audit.py  controls.py  decisions.py  integration.py  reports.py  run_context.py
backend/app/services/: __init__.py  control_review.py  enterprise_dispatch.py
backend/app/tools/: __init__.py  python_tool.py  rag_tool.py  sql_tool.py  validator_tool.py
backend/tests/: test_controls.py  test_evals.py  test_models.py  test_tools.py
data/docs/: sop_agent_change_control.md  sop_markdown_policy.md  sop_restock_policy.md
docs/: PROJECT_ASSESSMENT.md
evals/decision/: __init__.py
evals/factuality/: __init__.py
evals/forecasting/: __init__.py
infra/: docker-compose.yml
scripts/: build_taxonomy.py  ingest.py  run_cycle.py  run_evals.py
ui/: streamlit_app.py
ui/components/: charts.py  decision_panel.py  enterprise_ui.py  report_viewer.py
ui/utils/: pdf_export.py
