[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-retail-ops"
version = "0.1.0"
description = "Agentic Retail Ops Simulator using LangChain + LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # Data
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=17",
    # Validation / config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # ML / forecasting
    "scikit-learn>=1.5",
    "prophet>=1.1",
    "plotly>=5.24",
    # UI
    "streamlit>=1.40",
    # Embeddings
    "sentence-transformers>=3.3",
    # Observability
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
hdbscan = ["hdbscan>=0.8"]
lightgbm = ["lightgbm>=4.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
